--- a/admin/tpl/default/css/dialog/main.css
+++ b/admin/tpl/default/css/dialog/main.css
@@ -13,3 +13,55 @@
 	z-index: 110;
 }
 
+.oxs_dialog_load_files_zone{
+	width: 300px;
+	height: 70px;
+}
+
+
+.oxs_dialog_load_files_zone{	
+	padding: 10px;
+	border: 2px dashed grey;
+	position: relative;	
+	width: 300px;
+	height: 70px;
+}
+
+.oxs_dialog_load_files_zone_hover{	
+	padding: 10px;
+	border: 2px dashed #7CFC00;
+	position: relative;	
+	width: 300px;
+	height: 70px;
+}
+
+.oxs_dialog_load_files_zone_input{
+	opacity: 0;
+	position: absolute;
+	border: 1px solid red;		
+	height: 100%;
+	width: 100%;
+	top: 0px;
+	left: 0px;
+}
+
+.oxs_dialog_load_files_status_bar{
+	width: 250px;
+	height: 20px;
+	margin-top: 10px;
+	border: 1px solid #ccc;
+}
+
+.oxs_dialog_load_files_status_bar_inner{
+	width: 100%;
+	height: 20px;
+	background: #32CD32;
+}
+
+.oxs_dialog_load_files_status_bar_percent{	
+	width: 250px;
+	margin-top: -20px;
+	color: black;
+	font-size: 13px;
+	padding-top:2px; 
+}
