--- a/admin/tpl/hibgim/css/default.css
+++ b/admin/tpl/hibgim/css/default.css
@@ -1,18 +1,60 @@
 *{
-	padding: 0px;
+//	padding: 0px;
 	margin: 0px;
-	font-family: Tahoma;
-	font-size: 10,5pt;
+	font-family: Arial;
+	font-size: 10.5pt;
+	line-height: 1.45;
+	color: #545454;
+	word-wrap: break-word;
 }
 
 body{
 	background: #edecec;
 	padding-top: 15px;
+
 }
 
-.wrapper{	
+h3{
+	  font-size: 13.5pt;
+    line-height: 1.33;
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
+    color: black;
+}
+
+h2{
+	  font-size: 13.5pt;
+    line-height: 1.33;
+    padding: 0px 0px 5px 0px;
+    margin: 0px;
+    color: black;
+    //text-decoration: underline;
+    font-weight: bold;
+}
+
+p{
+	margin: 0px;
+//	text-indent: 30px;
+	margin-bottom: 5px;
+}
+
+
+.oxs_image{
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.oxs_image:hover{
+	box-shadow: 0 0 10px rgba(0,0,0,0.9);
+}
+
+.content_wraper{
+	margin-top: 0px;
+	margin-right: 15px;
+}
+
+.wrapper{
 	width: 1300px;
-	margin: auto;	
+	margin: auto;
 	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 	background-color: #fff;
 }
@@ -20,6 +62,15 @@ body{
 .oxs_header{
 	font-weight: bold;
 	margin: 0px 0px 10px 20px;
+}
+
+.main_wraper_left{
+	display: inline-block;
+	width: 650px;
+}
+
+.main_wraper_right{
+	display: inline-block;
 }
 
 /*///////////////// МЕНЮ ВЕРХ//////////////////////*/
@@ -40,28 +91,88 @@ body{
 
 
 /*///////////////// МЕНЮ ЛЕВО//////////////////////*/
-.left_menu li{	
-	list-style: none;	
+.left_menu li{
+	list-style: none;
+	max-width: 250px;
+	min-width: 190px;
+	padding: 5px 5px 5px 30px;
+}
+
+ul.left_menu{
 	width: 250px;
-	padding: 5px 0px 5px 30px;
 }
 
-ul.left_menu{	
-	
-}
-
-.left_menu *{		
+.left_menu *{
 	color: #0606b5;
 	line-height:17px;
 }
 
 .sf-menu li , .sf-menu li li , .sf-menu li li li{
 	background: #fff;
-	width: 300px;	
+
 	white-space: normal;
 }
 
 .sf-menu li:hover{
 	cursor: pointer;
 }
+/*/////////////////////////////////////////////*/
+
+
+/*////////////////НОВСТИ/////////////////////////////*/
+
+.oxs_news_name {
+
+}
+
+.oxs_news_name h3{
+	cursor: pointer;
+	width:530px ;
+	white-space: nowrap; /* Отменяем перенос текста */
+	overflow: hidden; /* Обрезаем содержимое */
+	text-overflow: ellipsis; /* Многоточие */
+}
+
+.oxs_news_create_data{
+	display: inline-block;
+	//background: url('../img/date.png') no-repeat;
+	background-size: contain;
+	background-position: 0px;
+	//padding-left: 20px;
+	color: green;
+}
+
+.oxs_news_cat{
+	display: inline-block;
+	background-size: contain;
+	background-position: 0px;
+	color: green;
+}
+
+.oxs_news_count{
+	display: inline-block;
+	//background: url('../img/vievers.svg') no-repeat;
+	background-size: contain;
+	background-position: 0px;
+	//padding-left: 20px;
+	color: green;
+}
+
+.oxs_news_like{
+	display: inline-block;
+	//background: url('../img/vievers.svg') no-repeat;
+	background-size: contain;
+	background-position: 0px;
+	//padding-left: 20px;
+	color: green;
+}
+
+.oxs_news_box{
+	padding: 0px 10px 15px 10px;
+	text-align: justify;
+	display: grid-inline;
+	//border: 1px solid red;
+	overflow: hidden;
+}
+
 /*/////////////////////////////////////////////*/
